--- a/FallingBricks2/MainWindow.xaml
+++ b/FallingBricks2/MainWindow.xaml
@@ -2,7 +2,6 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:FallingBricks2.View"
-        xmlns:model="clr-namespace:FallingBricks2.Model.UI"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <Canvas 
@@ -14,6 +13,6 @@
             Uid="board"
             Name="board"/>
 
-        <!--controls:GameView x:Name="viewGame" /-->
+        <!--controls:GameView x:Name="gameView" /-->
     </Grid>
 </Window>
