--- a/FallingBricks2/View/GameView.xaml
+++ b/FallingBricks2/View/GameView.xaml
@@ -4,11 +4,11 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:model="clr-namespace:FallingBricks2.Model.UI"
+      xmlns:controls="clr-namespace:FallingBricks2.Controls"                    
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-	Title="GameView">
+      d:DesignHeight="300" d:DesignWidth="300">
 
     <Grid>
-        
+        <controls:GameGrid />  
     </Grid>
 </model:OverlayUserControl>
