Finished off drawing shape in new grid

--- a/FallingBricks2/MainWindow.xaml
+++ b/FallingBricks2/MainWindow.xaml
@@ -13,6 +13,6 @@
             Uid="board"
             Name="board"/>
 
-        <!--controls:GameView x:Name="gameView" /-->
+        <controls:GameView x:Name="gameView" />
     </Grid>
 </Window>
