Getting shapes to move

--- a/FallingBricks2/Controls/GameGrid.xaml
+++ b/FallingBricks2/Controls/GameGrid.xaml
@@ -40,6 +40,7 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
+            <Button Grid.ColumnSpan="4" Content="Button" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="17" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         </Grid>
     </Border>
 </UserControl>
